compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_capital_case_variable.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: let One = 1
---
error: Unknown variable
  ┌─ /src/one/two.gleam:1:5
  │
1 │ let One = 1
  │     ^^^

The name `One` is not in scope here.

This pattern is matching a constructor named `One`, but there is no
constructor in scope with that name.
